sumo/tests/sumo/output/e2/errors/pos_too_high/errors.sumo
Error: Detector '4/1to3/1' lies beyond lane's '4/1to3/1_0' end.
Quitting (on error).
